# spirrow-cognilens

./: .env.example  .gitignore  LICENSE  README.md  README_ja.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: DESIGN.md  Spirrow-Cognilens_設計書.md
src/cognilens/: __init__.py  config.py  server.py
src/cognilens/core/: __init__.py  compressor.py  types.py
src/cognilens/llm/: __init__.py  base.py  lexora_client.py  mock.py  model_selector.py  openai_client.py
src/cognilens/prompts/: __init__.py  builder.py  templates.py
src/cognilens/strategies/: __init__.py  base.py  bullet.py  code_aware.py  concise.py  detailed.py  diff.py
src/cognilens/tools/: __init__.py  compress.py  diff.py  extract.py  progressive.py  summarize.py  unify.py
tests/: conftest.py
tests/integration/: test_tools.py
tests/unit/: test_llm_clients.py  test_prompts.py  test_strategies.py
